--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "test": "npm run eslint"
   },
   "devDependencies": {
+    "css-loader": "3.2.0",
+    "date-fns": "^2.0.1",
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "style-loader": "1.0.0",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.8.0",
-    "date-fns": "^2.0.1"
+    "webpack-dev-server": "3.8.0"
   },
   "engines": {
     "node": "10"
+  },
+  "dependencies": {
+    "flatpickr": "4.6.3"
   }
 }
