--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test": "npm run eslint"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^5.2.1",
     "css-loader": "3.2.0",
     "date-fns": "^2.0.1",
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "source-map-loader": "^0.2.4",
     "style-loader": "1.0.0",
+    "ts-loader": "^6.2.1",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6",
     "webpack-dev-server": "3.8.0"
@@ -25,6 +28,7 @@
   "dependencies": {
     "chart.js": "2.8.0",
     "chartjs-plugin-datalabels": "0.7.0",
-    "flatpickr": "4.6.3"
+    "flatpickr": "4.6.3",
+    "typescript": "^3.8.0-dev.20191026"
   }
 }
