--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "test": "npm run eslint"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
     "awesome-typescript-loader": "^5.2.1",
     "css-loader": "3.2.0",
     "date-fns": "^2.0.1",
-    "eslint": "6.1.0",
+    "eslint": "^6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "prettier": "^1.18.2",
     "source-map-loader": "^0.2.4",
     "style-loader": "1.0.0",
     "ts-loader": "^6.2.1",
