--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chart.js": "2.8.0",
     "chartjs-plugin-datalabels": "0.7.0",
     "flatpickr": "4.6.3",
+    "object-assign-deep": "^0.4.0",
     "typescript": "^3.8.0-dev.20191026"
   }
 }
