add Webpack Bundle Analizer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "sourceMap": true,
     "noEmit": false
   },
+  "awesomeTypescriptLoaderOptions": {
+    "silent": true
+  },
   "exclude": [
     "node_modules"
   ],
