--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack",
     "eslint": "eslint src/**/*.js",
     "start": "webpack-dev-server",
-    "test": "npm run eslint"
+    "test": "npm run eslint",
+    "bundle-analizer": "webpack --env production --profile --json > stats.json && webpack-bundle-analyzer stats.json"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.6.0",
@@ -25,7 +26,8 @@
     "ts-loader": "^6.2.1",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.8.0"
+    "webpack-dev-server": "3.8.0",
+    "webpack-bundle-analyzer": "^3.6.0"
   },
   "engines": {
     "node": "10"
